--- a/Web_Band/Assets/Css/style.css
+++ b/Web_Band/Assets/Css/style.css
@@ -6,6 +6,7 @@
 }
 
 html {
+    scroll-behavior: smooth;
     font-family: Arial, Helvetica, sans-serif;
 }
 .text-while {
@@ -46,6 +47,9 @@ html {
 }
 .mt-16 {
     margin-top: 16px;
+}
+.mt-32 {
+    margin-top: 32px;
 }
 
 .text-center {
@@ -112,18 +116,32 @@ html {
 #nav .nav-arrow-down {
     font-size: 14px;
 }
+#header .mobile-menu-btn,
 #header .search-btn {
     float: right;
     padding: 0 21px;
 }
+#header .menu-icon,
 #header .search-icon {
     color: #fff;
     font-size: 20px;
     line-height: 46px;
 }
+#header .mobile-menu-btn {
+    position: absolute;
+    top: 0;
+    right: 0;
+    display: none;
+}
 #header .search-btn:hover {
     background-color: #f44336;
     cursor: pointer;
+}
+#header .mobile-menu-btn:hover {
+    background-color: #ccc;
+}
+#header .mobile-menu-btn:hover .menu-icon {
+    color: #000;
 }
 
 /* SLIDER */
@@ -131,7 +149,7 @@ html {
     position: relative;
     margin-top: 46px;
     padding-top: 50%;
-    background: url('/Web_Band/Assets/Img/Slider1.jpg') top center / cover no-repeat;
+    background: url('/Assets/Img/Slider1.jpg') top center / cover no-repeat;
 }
 #slider .text-content {
     position: absolute;
@@ -156,10 +174,13 @@ html {
 
 }
 #content .content-section {
-    padding: 64px 0;
+    padding: 64px 0 112px;
     width: 800px;
+    max-width: 100%;
     margin-left: auto;
     margin-right: auto;
+    padding-left: 16px;
+    padding-right: 16px;
 }
 #content .section-heading {
     font-size: 30px;
@@ -184,7 +205,7 @@ html {
  
 
 #content .members-list {
-    margin-top: 48px;
+    margin-top: 32px;
 }
 #content .member-name {
     font-size: 15px;
@@ -199,7 +220,7 @@ html {
 }
 #content .tour-section {
     background-color: #000;
-    padding-bottom: 64px;
+    /* padding-bottom: 64px; */
 }
 #content .tickets-list {
     background-color: #fff;
@@ -231,8 +252,8 @@ html {
     margin-top: -3px;
 }
 .places-list {
-    margin-top: 32px;
-    margin-bottom: 32px;
+    margin-top: 16px;
+    /* margin-bottom: 32px; */
     /* padding-bottom: 32px; */
 }
 
@@ -310,12 +331,31 @@ html {
     cursor: pointer;
 }
 
+/* Map */
+.map-section img {
+    width: 100%;
+}
+
 
 /* FOOTER */
 #footer {
-
+    padding: 64px 16px;
+    text-align: center;
 }
-
+#footer .socials-list {
+    font-size: 24px;
+    /* color: #000; */
+}
+#footer .socials-list a {
+    color: rgba(0, 0, 0, 0.4);
+}
+#footer .socials-list a:hover {
+    color: rgba(0, 0, 0, 0.6);
+}
+#footer .copyright {
+    margin-top: 15px;
+    color: rgba(0, 0, 0, 0.4);
+}
 /* Modal of Tickets  */
 .modal {
     position: fixed;
